added annotations for swagger
