# api/controller/dto/request_dto/trusted_aws_session_dto/create_trusted_aws_session_request_dto.go
@@ -5,12 +5,33 @@ import (
 	"leapp_daemon/custom_error"
 )
 
+// swagger:parameters createTrustedAwsSession
+type CreateTrustedAwsSessionParamsWrapper struct {
+	// This text will appear as description of your request body.
+	// in:body
+	Body CreateTrustedAwsSessionRequestDto
+}
+
 type CreateTrustedAwsSessionRequestDto struct {
-	ParentId      string `json:"parentId" binding:"required"`
-	AccountName   string `json:"accountName" binding:"required"`
+	// the parent session id, can be an aws plain or federated session
+	// it's generated with an uuid v4
+	// required: true
+	ParentId string `json:"parentId" binding:"required,uuid4"`
+
+	// the name which will be displayed
+	// required: true
+	AccountName string `json:"accountName" binding:"required"`
+
+	// the account number of the aws account related to the role
+	// required: true
 	AccountNumber string `json:"accountNumber" binding:"required,numeric,len=12"`
-	RoleName      string `json:"roleName" binding:"required"`
-	Region        string `json:"region" binding:"awsregion"`
+
+	// the role name
+	// required: true
+	RoleName string `json:"roleName" binding:"required"`
+
+	// the region on which the session will be initialized
+	Region string `json:"region" binding:"awsregion"`
 }
 
 func (requestDto *CreateTrustedAwsSessionRequestDto) Build(context *gin.Context) error {
